--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -214,6 +214,16 @@
       </section>
       <!-- end Links -->
       {% endif %}
+      
+      
+      <div class="container more-container">
+        <h3>{{ site.more_title | default: "A Little More About Me" }}</h3>
+        <div class="row clearfix">
+          <div class="col-md-12">
+            {{ site.more_content | strip | markdownify }}
+          </div>
+        </div>
+      </div>
 
       {% if site.resume_print_social_links %}
       <!-- begin Print Social Links -->
