--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -215,6 +215,9 @@
       <!-- end Links -->
       {% endif %}
       
+      <header class="Prova!!">
+          <h2>Additional Links</h2>
+      </header>
       
       <div class="container more-container">
         <h3>{{ site.more_title | default: "A Little More About Me" }}</h3>
