--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -215,8 +215,8 @@
       <!-- end Links -->
       {% endif %}
       
-      <header class="Prova!!">
-          <h2>Additional Links</h2>
+      <header class="section-header">
+          <h2>Publications</h2>
       </header>
       
       <div class="container more-container">
