--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -220,7 +220,7 @@
       </header>
       
       <div class="container more-container">
-          <div class="col-md-auto">
+          <div class="col-md-6">
             {{ site.more_content | strip | markdownify }}
           </div>
         </div>
