--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -221,7 +221,7 @@
       
       <div class="container more-container">
           <div class="col-md-6">
-            {{ site.more_content | strip | markdownify }}
+            {{ site.more_content }}
           </div>
         </div>
       </div>
