--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -220,11 +220,13 @@
       </header>
       
       <div class="container more-container">
-          <div class="col-md-6">
-            {{ site.more_content }}
+        <div class="resume-item">
+          <div class="col-md-12">
+            {{ site.more_content | strip | markdownify }}
           </div>
         </div>
       </div>
+
 
       {% if site.resume_print_social_links %}
       <!-- begin Print Social Links -->
