--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -222,7 +222,7 @@
       <div class="container more-container">
         <div class="resume-item">
           <div class="col-md-12">
-            {{ site.more_content | strip | markdownify }}
+            {{ site.more_content | strip | markdownify | truncate: 160  }}
           </div>
         </div>
       </div>
