--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -221,7 +221,7 @@
       
       <div class="container more-container">
         <div class="resume-item">
-            {{ site.more_content | markdownify | strip_newlines | truncate: 160  }}
+            {{ site.more_content | markdownify }}
         </div>
       </div>
 
