--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -215,6 +215,9 @@
       <!-- end Links -->
       {% endif %}
       
+      <!-- begin Publications -->
+      <section class="content-section print-only">
+      
       <header class="section-header">
           <h2>Publications</h2>
       </header>
@@ -225,6 +228,7 @@
         </div>
       </div>
 
+      <!-- end Projects -->
 
       {% if site.resume_print_social_links %}
       <!-- begin Print Social Links -->
