--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -216,7 +216,7 @@
       {% endif %}
       
       <!-- begin Publications -->
-      <section class="content-section print-only">
+      <section class="content-section">
       
       <header class="section-header">
           <h2>Publications</h2>
