--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -224,7 +224,7 @@
       
       <div class="container more-container">
         <div class="resume-item">
-            {{ site.more_content | markdownify }}
+            {{ site.more_content }}
         </div>
       </div>
 
