--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -57,6 +57,7 @@
         </header>
 
         {% for job in site.data.experience %}
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 Articles in referred journals</h3>
           <ol>
               <li>first item</li>
