--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,12 +58,10 @@
 
         {% for job in site.data.experience %}
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 Articles in referred journals</h3>
-          <ol>
-              <li>first item</li>
-              <li>second item</li>
-              <li>third item</li>
-          </ol>
+          <p> Articles in referred journals</p>
+          <ul>
+              <li>Corradin R., Danese L., Ongaro A. (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, International Journal of Approximate Reasoning, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, [Link].</li>
+          </ul>
         </div><!-- end of resume-item -->
         {% endfor %}
 
