--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -60,7 +60,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <p> Articles in referred journals</p>
           <ul>
-              <li>Corradin R., Danese L., Ongaro A. (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, International Journal of Approximate Reasoning, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, [Link].</li>
+              <li>Corradin R., <strong>Danese L.</strong>, Ongaro A. (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, International Journal of Approximate Reasoning, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, <p><a href="https://www.sciencedirect.com/science/article/pii/S0888613X21002231">Link</a></p></li>
           </ul>
         </div><!-- end of resume-item -->
         {% endfor %}
