--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,9 +58,9 @@
 
         {% for job in site.data.experience %}
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <p> Articles in referred journals</p>
+          <p>  <strong>Articles in referred journals <strong> </p>
           <ul>
-              <li>Corradin R., <strong>Danese L.</strong>, Ongaro A. (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, International Journal of Approximate Reasoning, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, <p><a href="https://www.sciencedirect.com/science/article/pii/S0888613X21002231">Link</a></p></li>
+              <li>Corradin R., <strong>Danese L.</strong>, Ongaro A. (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, International Journal of Approximate Reasoning, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, <a href="https://www.sciencedirect.com/science/article/pii/S0888613X21002231">Link</a></li>
           </ul>
         </div><!-- end of resume-item -->
         {% endfor %}
